syntax = "proto3";
package axelarcork.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "axelarcork/v1/genesis.proto";
import "axelarcork/v1/axelarcork.proto";

option go_package = "github.com/peggyjv/sommelier/v6/x/axelarcork/types";

// Query defines the gRPC query service for the cork module.
service Query {
  // QueryParams queries the axelar cork module parameters.
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sommelier/cork/v1/params";
  }
  // QueryCellarIDs returns all cellars and current tick ranges
  rpc QueryCellarIDs(QueryCellarIDsRequest) returns (QueryCellarIDsResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/cellar_ids";
  }
  // QueryScheduledCorks returns all scheduled corks
  rpc QueryScheduledCorks(QueryScheduledCorksRequest) returns (QueryScheduledCorksResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/scheduled_corks";
  }
  // QueryScheduledBlockHeights returns all scheduled block heights
  rpc QueryScheduledBlockHeights(QueryScheduledBlockHeightsRequest) returns (QueryScheduledBlockHeightsResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/scheduled_block_heights";
  }

  // QueryScheduledCorks returns all scheduled corks at a block height
  rpc QueryScheduledCorksByBlockHeight(QueryScheduledCorksByBlockHeightRequest)
      returns (QueryScheduledCorksByBlockHeightResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/scheduled_corks_by_block_height/{block_height}";
  }

  // QueryScheduledCorks returns all scheduled corks with the specified ID
  rpc QueryScheduledCorksByID(QueryScheduledCorksByIDRequest) returns (QueryScheduledCorksByIDResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/scheduled_corks_by_id/{id}";
  }

  rpc QueryCorkResult(QueryCorkResultRequest) returns (QueryCorkResultResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/cork_results/{id}";
  }

  rpc QueryCorkResults(QueryCorkResultsRequest) returns (QueryCorkResultsResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/cork_results";
  }

  rpc QueryChainConfigurations(QueryChainConfigurationsRequest) returns (QueryChainConfigurationsResponse) {
    option (google.api.http).get = "/sommelier/axelarcork/v1/chain_configurations";
  }
}

// QueryParamsRequest is the request type for the Query/Params gRPC method.
message QueryParamsRequest {}

// QueryParamsRequest is the response type for the Query/Params gRPC method.
message QueryParamsResponse {
  // allocation parameters
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryCellarIDsRequest is the request type for Query/QueryCellarIDs gRPC method.
message QueryCellarIDsRequest {
  string chain_name = 1;
  uint64 chain_id   = 2;
}

// QueryCellarIDsResponse is the response type for Query/QueryCellars gRPC method.
message QueryCellarIDsResponse {
  repeated string cellar_ids = 1;
}

// QueryScheduledCorksRequest
message QueryScheduledCorksRequest {
  string chain_name = 1;
  uint64 chain_id   = 2;
}

// QueryScheduledCorksResponse
message QueryScheduledCorksResponse {
  repeated ScheduledAxelarCork corks = 1;
}

// QueryScheduledBlockHeightsRequest
message QueryScheduledBlockHeightsRequest {
  string chain_name = 1;
  uint64 chain_id   = 2;
}

// QueryScheduledBlockHeightsResponse
message QueryScheduledBlockHeightsResponse {
  repeated uint64 block_heights = 1;
}

// QueryScheduledCorksByBlockHeightRequest
message QueryScheduledCorksByBlockHeightRequest {
  uint64 block_height = 1;
  string chain_name   = 2;
  uint64 chain_id     = 3;
}

// QueryScheduledCorksByBlockHeightResponse
message QueryScheduledCorksByBlockHeightResponse {
  repeated ScheduledAxelarCork corks = 1;
}

// QueryScheduledCorksByIDRequest
message QueryScheduledCorksByIDRequest {
  string id         = 1;
  string chain_name = 2;
  uint64 chain_id   = 3;
}

// QueryScheduledCorksByIDResponse
message QueryScheduledCorksByIDResponse {
  repeated ScheduledAxelarCork corks = 1;
}

message QueryCorkResultRequest {
  string id         = 1;
  string chain_name = 2;
  uint64 chain_id   = 3;
}

message QueryCorkResultResponse {
  AxelarCorkResult corkResult = 1;
}

message QueryCorkResultsRequest {
  string chain_name = 1;
  uint64 chain_id   = 2;
}

message QueryCorkResultsResponse {
  repeated AxelarCorkResult corkResults = 1;
}

message QueryChainConfigurationsRequest {}

message QueryChainConfigurationsResponse {
  repeated ChainConfiguration configurations = 1;
}