syntax = "proto3";
package cork.v2;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/cork/types";

message Cork {
  // call body containing the ABI encoded bytes to send to the contract
  bytes encoded_contract_call = 1;
  // address of the contract to send the call
  string target_contract_address = 2;
}

message ScheduledCork {
  Cork cork = 1;
  uint64 block_height = 2;
  string validator = 3;
  uint64 id = 4;
}

message CellarIDSet {
  repeated string ids = 1;
}
